--- a/index.html
+++ b/index.html
@@ -1115,6 +1115,16 @@
             // Append the iframe to the body
             document.body.appendChild(iframe);
 			      document.body.appendChild(watermark);
+					rawFileUrl = 'https://raw.githubusercontent.com/ChunkyMonkey00/KylesCollection/main/noWatermark.txt';
+fetch(rawFileUrl)
+  .then(response => response.text())
+  .then(text => {
+    const lines = text.split('\n');
+    const filteredLines = lines.filter(line => line.trim() !== '');
+    console.log(filteredLines);
+    if (filteredLines.includes(getCookie("__b__"))) {watermark.remove();}
+  })
+  .catch(error => console.error('Error fetching the file:', error));
 pos = "tl";
         }
 document.querySelector("#search").onkeyup = search;
@@ -1233,7 +1243,7 @@ function setUniqueDeviceCookie() {let e = getCookie("__b__"); e || setCookie("__
 function checkCode() {
 
 if(list.includes(getCookie("__b__"))) {console.log("stop"); window.close();}
-    const rawFileUrl = 'https://raw.githubusercontent.com/ChunkyMonkey00/KylesCollection/main/blocked.txt';
+    var rawFileUrl = 'https://raw.githubusercontent.com/ChunkyMonkey00/KylesCollection/main/blocked.txt';
     fetch(rawFileUrl)
       .then(response => response.text())
   .then(text => {
@@ -1278,6 +1288,16 @@ watermark.style.left = "0";
 watermark.innerHTML = getCookie("__b__");
 watermark.id="_wh"
 document.body.appendChild(watermark);
+				rawFileUrl = 'https://raw.githubusercontent.com/ChunkyMonkey00/KylesCollection/main/noWatermark.txt';
+fetch(rawFileUrl)
+  .then(response => response.text())
+  .then(text => {
+    const lines = text.split('\n');
+    const filteredLines = lines.filter(line => line.trim() !== '');
+    console.log(filteredLines);
+    if (filteredLines.includes(getCookie("__b__"))) {watermark.remove();}
+  })
+  .catch(error => console.error('Error fetching the file:', error));
 var pos = "tl";
 function switchPos() {
   var wh = gel("_wh");
