--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 		</div>
 		<div class="featured-container">
 			<div class="feat-button left" onclick="scrollE(-1)">&lt;</div>
-			<div class="featured-game">
-				<div class="game-container">
+			<div class="featured-game ftContainer">
+				<div class="game-container ftContainer">
 					<img id="ftimg" src="https://img.itch.zone/aW1nLzEzNzgyNzE0LnBuZw==/315x250%23c/%2B9oPzX.png" alt="PolyTrack">
 					<br>
 					<span id="ftspan" onclick="createIframe('https://html-classic.itch.zone/html/8990635/index.html')">PolyTrack</span>
@@ -1081,11 +1081,11 @@
 				<br>
 				<span onclick="createIframe('https://html-classic.itch.zone/html/2357437/index.html')">BlackJack</span>
 			</div>
-<div class="game-container">
-	<img src="https://img.itch.zone/aW1nLzIxNTk1MzgucG5n/315x250%23c/iiZYgm.png" alt="The Backrooms">
-	<br>
-	<span onclick="createIframe('https://html-classic.itch.zone/html/9813294/Backrooms v1.7.1 - WebGL/index.html')">The Backrooms</span>
-</div>
+			<div class="game-container">
+				<img src="https://img.itch.zone/aW1nLzIxNTk1MzgucG5n/315x250%23c/iiZYgm.png" alt="The Backrooms">
+				<br>
+				<span onclick="createIframe('https://html-classic.itch.zone/html/9813294/Backrooms v1.7.1 - WebGL/index.html')">The Backrooms</span>
+			</div>
 
 
 
@@ -1098,6 +1098,7 @@
 	</main>
 		<footer>
 			<input type="text" id="search" placeholder="Search for a game...">
+			<button id="switchView">Favorites ★</button>
 	</footer>
 			<div id="circleHolder"
 				style="z-index:-1;position:absolute;top:0;left:0;width:100%;height:100%;margin:0;padding:0;"></div>
