--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
 	<header>
 		<nav>
-			<h1>Kyle's Collection</h1>
+			<h1>The Collection</h1>
 		</nav>
 	</header>
 	<section class="featured-section">
