--- a/index.html
+++ b/index.html
@@ -1094,7 +1094,7 @@
 			<div class="game-container">
 		<img src="https://img.itch.zone/aW1nLzExMDQ2NDA2LnBuZw==/315x250%23c/l%2Bl5Tb.png" alt="Granny Remake">
 		<br>
-		<span onclick="createIframe('https://wildgamesnet.itch.io/grandpa-granny-4-online-game-pc')">Granny Remake</span>
+		<span onclick="createIframe('https://html-classic.itch.zone/html/7173341-775576/index.html')">Granny Remake</span>
 		</div>
 
 
