--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				<div class="game-container ftContainer">
 					<img id="ftimg" src="https://img.itch.zone/aW1nLzEzNzgyNzE0LnBuZw==/315x250%23c/%2B9oPzX.png" alt="PolyTrack">
 					<br>
-					<span id="ftspan" onclick="createIframe('https://html-classic.itch.zone/html/8990635/index.html')">PolyTrack</span>
+					<span id="ftspan" onclick="createIframe('https://html-classic.itch.zone/html/11183255/index.html')">PolyTrack</span>
 				</div>
 			</div>
 			<div class="feat-button right" onclick="scrollE(1)">&gt;</div>
@@ -120,7 +120,7 @@
 			<div id='ft1' class="game-container">
 				<img src="https://img.itch.zone/aW1nLzEzNzgyNzE0LnBuZw==/315x250%23c/%2B9oPzX.png" alt="PolyTrack">
 				<br>
-				<span onclick="createIframe('https://html-classic.itch.zone/html/8990635/index.html')">PolyTrack</span>
+				<span onclick="createIframe('https://html-classic.itch.zone/html/11183255/index.html')">PolyTrack</span>
 			</div>
 			<div class="game-container">
 				<img src="https://img.itch.zone/aW1nLzQ1NjEwNDYuZ2lm/315x250%23cm/S3N60I.gif" alt="Gun Knight">
