--- a/index.html
+++ b/index.html
@@ -375,6 +375,23 @@
 				<span onclick="createIframe('https://html-classic.itch.zone/html/9780112/index.html')">Auto Necrochess</span>
 			</div>
 
+			<div class="game-container">
+				<img src="https://img.itch.zone/aW1hZ2UvMTE4Njc4LzU0Nzg0Mi5wbmc=/315x250%23c/iyd%2B6r.png" alt="Drift Hunters">
+				<br>
+				<span onclick="createIframe('https://html-classic.itch.zone/html/1792221/ItchIO/index.html?v=1574649458')">Drift Hunters</span>
+			</div>
+
+			<div class="game-container">
+				<img src="https://img.itch.zone/aW1nLzE1MjgyNjYzLnBuZw==/315x250%23c/P9cA4B.png" alt="Retro Racing: DD">
+				<br>
+				<span onclick="createIframe('https://html-classic.itch.zone/html/11406211/index.html')">Retro Racing: DD</span>
+			</div>
+
+			<div class="game-container">
+				<img src="https://img.itch.zone/aW1nLzEzNTk2NTk1LnBuZw==/315x250%23c/59NziZ.png" alt="Garage Rally Circuit">
+				<br>
+				<span onclick="createIframe('https://html.itch.zone/html/8812954/index.html')">Garage Rally Circuit</span>
+			</div>
 
 			<div class="game-container">
 				<img src="https://img.itch.zone/aW1nLzEyNTMyNjg0LmpwZw==/315x250%23c/2xCT8A.jpg" alt="Little Runmo - The G...">
