--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
 	<!-- Google tag (gtag.js) -->
 	<script async src="https://www.googletagmanager.com/gtag/js?id=G-PEL6CNPNYP"></script>
+	<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7959159977743747"
+     crossorigin="anonymous"></script>
 	<script>
 		window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
