--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 			<div class="feat-button left" onclick="scrollE(-1)">&lt;</div>
 			<div class="featured-game ftContainer">
 				<div class="game-container ftContainer">
-					<img id="ftimg" src="https://img.itch.zone/aW1nLzEzNzgyNzE0LnBuZw==/315x250%23c/%2B9oPzX.png" alt="PolyTrack">
+					<img id="ftimg" src="https://raw.githubusercontent.com/ChunkyMonkey00/jsonChatify/refs/heads/main/thumbnail.png" alt="Chat Room">
 					<br>
-					<span id="ftspan" onclick="createIframe('https://html-classic.itch.zone/html/11183255/index.html')">PolyTrack</span>
+					<span id="ftspan" onclick="createIframe('https://chunkymonkey00.github.io/jsonChatify/')">Chat Room</span>
 				</div>
 			</div>
 			<div class="feat-button right" onclick="scrollE(1)">&gt;</div>
@@ -49,6 +49,11 @@
 				<img src="https://img.itch.zone/aW1nLzI4ODA0MDMucG5n/315x250%23c/puRpms.png" alt="Cryptid Farm">
 				<br>
 				<span onclick="createIframe('https://html-classic.itch.zone/html/9685435/cryptid%20farm%20108%20beta%20demo%20anniversary%202/index.html')">Cryptid Farm</span>
+			</div>
+			<div class="game-container">
+				<img src="https://raw.githubusercontent.com/ChunkyMonkey00/jsonChatify/refs/heads/main/thumbnail.png" alt="Chat Room">
+				<br>
+				<span onclick="createIframe('https://chunkymonkey00.github.io/jsonChatify/')">Chat Room</span>
 			</div>
 			<div class="game-container">
 				<img src="https://img.itch.zone/aW1hZ2UvNDczNjcvMjA1ODcxLnBuZw==/315x250%23c/NsZPxC.png" alt="Sort the Court">
