--- a/index.html
+++ b/index.html
@@ -625,7 +625,7 @@
 			<div class="game-container">
 				<img src="https://img.itch.zone/aW1nLzUzNzA0NzAuZ2lm/315x250%23cm/KZYgoc.gif" alt="V.R.G.">
 				<br>
-				<span onclick="createIframe('https://html.itch.zone/html/9975649/index.html')">V.R.G.</span>
+				<span onclick="createIframe('https://html.itch.zone/html/11551088/index.html')">V.R.G.</span>
 			</div>
 
 
