--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
 			<div class="feat-button left" onclick="scrollE(-1)">&lt;</div>
 			<div class="featured-game ftContainer">
 				<div class="game-container ftContainer">
-					<img id="ftimg" src="https://raw.githubusercontent.com/ChunkyMonkey00/jsonChatify/refs/heads/main/thumbnail.png" alt="Chat Room">
+					<img id="ftimg" src="https://raw.githubusercontent.com/ChunkyMonkey00/KylesCollection/refs/heads/main/Screenshot%202024-10-04%20085329.png" alt="Wordle Infinite">
 					<br>
-					<span id="ftspan" onclick="createIframe('https://chunkymonkey00.github.io/jsonChatify/')">Chat Room</span>
+					<span id="ftspan" onclick="createIframe('https://mikhad.github.io/wordle/#infinite')">Wordle Infinite</span>
 				</div>
 			</div>
 			<div class="feat-button right" onclick="scrollE(1)">&gt;</div>
@@ -45,6 +45,11 @@
 	</section>
 	<main>
 		<div class="game-grid">
+			<div class="game-container">
+				<img src="https://raw.githubusercontent.com/ChunkyMonkey00/KylesCollection/refs/heads/main/Screenshot%202024-10-04%20085329.png" alt="Wordle Infinite">
+				<br>
+				<span onclick="createIframe('https://mikhad.github.io/wordle/#infinite')">Wordle Infinite</span>
+			</div>
 			<div class="game-container">
 				<img src="https://img.itch.zone/aW1nLzI4ODA0MDMucG5n/315x250%23c/puRpms.png" alt="Cryptid Farm">
 				<br>
