--- a/index.html
+++ b/index.html
@@ -46,6 +46,16 @@
 	<main>
 		<div class="game-grid">
 			<div class="game-container">
+				<img src="https://img.itch.zone/aW1nLzMwOTg2MDYucG5n/315x250%23c/0Xn1Bw.png" alt="DustSim">
+				<br>
+				<span onclick="createIframe('https://html-classic.itch.zone/html/4501816/index.html?load=ds0c1bY_BCcAwDMQmMuhaMpcPsj_0EUPaxj-DDiFPTaYAIHEMcAgsMC5iWXl11Dd7hUk8ikenOGFjEFWyzq_hhI0hxArZve8_Tvp3PA')">DustSim</span>
+			</div>
+			<div class="game-container">
+				<img src="https://img.itch.zone/aW1nLzIwNjQ5NzAucG5n/315x250%23c/DeXseB.png" alt="Geopolitics">
+				<br>
+				<span onclick="createIframe('https://html-classic.itch.zone/html/1450921/Geopolitics_0.3/index.html?v=1574335512')">Geopolitics</span>
+			</div>
+			<div class="game-container">
 				<img src="https://raw.githubusercontent.com/ChunkyMonkey00/KylesCollection/refs/heads/main/Screenshot%202024-10-04%20085329.png" alt="Wordle Infinite">
 				<br>
 				<span onclick="createIframe('https://mikhad.github.io/wordle/#infinite')">Wordle Infinite</span>
