--- a/index.html
+++ b/index.html
@@ -44,7 +44,13 @@
 		</div>
 	</section>
 	<main>
+		
 		<div class="game-grid">
+			<div class="game-container">
+				<img src="https://img.itch.zone/aW1nLzEzNzgyNzE0LnBuZw==/315x250%23c/%2B9oPzX.png" alt="PolyTrack">
+				<br>
+				<span onclick="createIframe('https://html-classic.itch.zone/html/11880944/index.html')">PolyTrack</span>
+			</div>
 			<div class="game-container">
 				<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQR3poIcdijRHW9wQSLOatGzhwswoSNO6xwUQ" alt="The Oregon Trail">
 				<br>
@@ -142,7 +148,7 @@
 			<div id='ft1' class="game-container">
 				<img src="https://img.itch.zone/aW1nLzEzNzgyNzE0LnBuZw==/315x250%23c/%2B9oPzX.png" alt="PolyTrack">
 				<br>
-				<span onclick="createIframe('https://html-classic.itch.zone/html/11183255/index.html')">PolyTrack</span>
+				<span onclick="createIframe('https://html-classic.itch.zone/html/11880944/index.html')">PolyTrack</span>
 			</div>
 			<div class="game-container">
 				<img src="https://img.itch.zone/aW1nLzQ1NjEwNDYuZ2lm/315x250%23cm/S3N60I.gif" alt="Gun Knight">
